<resources>
    <!-- Nom de l'application -->
    <string name="app_name">The Fast Food</string>

    <!-- Général -->

    <!-- Global-->
    <string name="error">Erreur !</string>
    <string name="success">Succès !</string>

    <!-- Edit Profil Screen-->
    <string name="username"> Pseudo </string>
    <string name="phoneNum"> N° de téléphone </string>
    <string name="mail">Adresse mail</string>
    <string name="editBtn">Modifier</string>

    <string name="dialogTitle"> Choisissez une action</string>
    <string name="editProfilPic"> Editer l\'image de profil</string>
    <string name="editCoverPic"> Editer l\'image de couverture</string>
    <string name="editProfileName"> Editer le nom</string>
    <string name="editProfilePhone"> Editer le numéro de téléphone</string>

    <string name="messUpdatePic">Modification de l\'image de profil</string>
    <string name="messUpdateCover">Modification de l\'image de couverture</string>
    <string name="messUpdateName">Modification du nom</string>
    <string name="messUpdatePhone">Modification du numéro de téléphone</string>
    <string name="updateName">Modifier votre nom</string>
    <string name="updatePhone">Modifier votre numéro de téléphone</string>

    <string name="camera">Caméra</string>
    <string name="gallery">Galerie</string>
    <string name="pickImg">Choisissez le support</string>

    <string name="nameUpdateET">Nom</string>
    <string name="phoneUpdateET">Numéro de téléphone</string>

    <string name="updateText">Modifier</string>
    <string name="cancelUpdateBtn">Annuler</string>

    <string name="errorETName">Veuillez entrer un nom</string>
    <string name="errorETPhone">Veuillez entrer un numéro de téléphone</string>

    <string name="toastRequestCDenied">Veuillez autoriser la permission d\'accès à la caméra et au gestionnaire de fichiers</string>
    <string name="toastRequestGDenied">Veuillez autoriser la permission d\'accès au gestionnaire de fichiers</string>



    <!-- Ecran de connexion -->
    <string name="addressMail">Adresse Mail</string>
    <string name="password">Mot de passe</string>
    <string name="logToReg">Pas encore de compte ?</string>
    <string name="logBtn">CONNEXION</string>
    <string name="resetPass">Mot de passe Oublié ?</string>
    <string name="textErr"></string>
    <string name="mail_empty">Veuillez entrer un E-mail !</string>
    <string name="pw_empty">Veuillez entrer un Mot de passe !</string>
    <string name="login_fail">Aucun utilisateur trouvé !</string>
    <string name="googleErr">Une erreur s\'est produite lors de l\'authentification Google</string>

    <!-- Register Screen-->
    <string name="regToLog">Déjà un compte ?</string>
    <string name="regBtn">ENREGISTRER</string>
    <string name="short_pw">Veuillez entrer un mot de passe à 8 caractères !</string>
    <string name="reg_fail">Erreur ! Veuillez ré-essayer dans un instant !</string>

    <!-- Reset Password Sreen -->
    <string name="resetBtn">RECUPERER</string>
    <string name="cancelRPBtn">ANNULER</string>
    <string name="email_sent">E-mail sent !</string>


    <!-- Fragment Shop-->
    <string name="shopItem">Shop</string>

    <!-- Fragment Profile -->
    <string name="profileItem">Profil</string>

    <!-- Fragment Map -->
    <string name="mapItem">Map</string>

    <!-- slides titles -->
    <string name="burgersTitle">Burgers</string>
    <string name="snacksTitle">Snacks</string>
    <string name="saladsTitle">Salades</string>
    <string name="dessertsTitle">Desserts</string>
    <string name="drinksTitle">Boissons</string>
    <string name="popularTitle">Populaires</string>



    <string name="menu">menu</string>
    <string name="euro">€</string>
    <string name="panier">Panier</string>
    <string name="valider">Valider</string>
    <string name="vider">Vider</string>
    <string name="annuler">Annuler</string>
    <string name="totalPrix">"Total : "</string>
    <string name="zero">0</string>

</resources>