<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.activities.LoginActivity"
    android:background="@color/bgColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLLLA"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/logoLA"
            android:layout_width="174dp"
            android:layout_height="195dp"
            app:layout_constraintLeft_toLeftOf="@+id/topLLLA"
            app:layout_constraintRight_toRightOf="@id/topLLLA"
            app:layout_constraintTop_toTopOf="@+id/topLLLA"
            app:layout_constraintBottom_toBottomOf="@+id/topLLLA"
            android:src="@drawable/finallogo"/>

        <TextView
            android:id="@+id/errorTextViewLA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoLA"
            android:layout_marginTop="20dp"
            android:text="@string/textErr"
            android:textColor="@color/errorColor"
            android:fontFamily="@font/breeserif"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLLLA"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <!-- editText de material design-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailLogTField"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/addressMail"
            android:inputType="textPersonName"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/blackColor"
            app:hintTextColor="@color/blackColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailLogTEField"
                android:inputType="textPersonName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passLogTField"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/blackColor"
            app:hintTextColor="@color/blackColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passLogTEField"
                android:inputType="textPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLogin"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llLogin"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/resetPass"
                android:textColor="@color/blackColor"
                android:fontFamily="@font/breeserif"
                android:textSize="15dp"
                />
            <TextView
                android:id="@+id/logToReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/logToReg"
                android:textColor="@color/blackColor"
                android:fontFamily="@font/breeserif"
                android:textSize="15dp"
                />
        </LinearLayout>

        <!-- Linear Layout comportant les boutons de connexion par mail ou de connexion par google -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/logBtn"
                android:fontFamily="@font/breeserif"
                android:backgroundTint="@color/blackColor"
                android:shadowColor="@color/blackColor"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>