<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.activities.ResetPasswordActivity"
    android:background="@color/bgColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLLLA"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/logoRPA"
            android:layout_width="174dp"
            android:layout_height="195dp"
            app:layout_constraintLeft_toLeftOf="@+id/topLLLA"
            app:layout_constraintRight_toRightOf="@id/topLLLA"
            app:layout_constraintTop_toTopOf="@+id/topLLLA"
            app:layout_constraintBottom_toBottomOf="@+id/topLLLA"
            android:src="@drawable/finallogo"/>

        <TextView
            android:id="@+id/errorTextViewRPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoRPA"
            android:layout_marginTop="20dp"
            android:text="@string/textErr"
            android:textColor="@color/errorColor"
            android:fontFamily="@font/breeserif"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llRPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailResetTField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/addressMail"
            android:inputType="textPersonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/blackColor"
            app:hintTextColor="@color/blackColor"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailResetTEField"
                android:inputType="textPersonName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:errorEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <!-- LinearLayout comportant un bouton de récupération du MDP et d'un bouton d'annulation-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llRPass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/resetPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/resetBtn"
            android:fontFamily="@font/breeserif"
            android:backgroundTint="@color/blackColor"
            android:shadowColor="@color/blackColor"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"/>

        <Button
            android:id="@+id/cancelRPBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cancelRPBtn"
            android:fontFamily="@font/breeserif"
            android:backgroundTint="@color/errorColor"
            android:shadowColor="@color/blackColor"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>