<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/coverImg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_constraintTop_toTopOf="@id/constraintLayoutProfile"
                app:layout_constraintLeft_toLeftOf="@id/constraintLayoutProfile"
                app:layout_constraintRight_toRightOf="@+id/constraintLayoutProfile"
                android:scaleType="fitXY"
                android:background="@color/greyColor"/>

            <LinearLayout
                android:id="@+id/linearLayoutMain"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintLeft_toLeftOf="@id/constraintLayoutProfile"
                app:layout_constraintRight_toRightOf="@id/constraintLayoutProfile"
                app:layout_constraintTop_toTopOf="@id/constraintLayoutProfile"
                android:layout_marginTop="100dp">

                <ImageView
                    android:id="@+id/avatarImg"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="30dp"
                    android:scaleType="fitXY"
                    android:background="@color/darkGreyColor"
                    android:src="@drawable/add_img"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/usernameTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/username"
                        android:fontFamily="@font/breeserif"
                        android:textSize="25sp"
                        android:textColor="@color/blackColor"
                        />

                    <TextView
                        android:id="@+id/mailAddressTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/mail"
                        android:fontFamily="@font/breeserif"
                        android:textColor="@color/blackColor"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        />



                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutMain"
                app:layout_constraintLeft_toLeftOf="@id/constraintLayoutProfile"
                app:layout_constraintRight_toRightOf="@id/constraintLayoutProfile"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/mobile_phone"
                        android:layout_marginStart="50dp"
                        />

                    <TextView
                        android:id="@+id/phoneNumberTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:text="@string/phoneNum"
                        android:textSize="25dp"
                        android:fontFamily="@font/breeserif"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/editBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/blackColor"
                        android:text="@string/editBtn"
                        android:fontFamily="@font/breeserif"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>